# grpc_cpp_img

./: CMakeLists.txt  README.md
protos/: cv_img.proto  helloworld.proto
src/: greeter_client.cc  greeter_server.cc  img_proc_client.cpp  img_proc_server.cpp
